--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <span class="close">&times;</span>
             <h2>扫码关注一手线报</h2>
             <div class="qr-code">
-                <img src=logo.png alt="公众号二维码">
+                <img src="logo.png" alt="公众号二维码">
             </div>
             <p>扫描二维码关注公众号，获取最新优惠信息</p>
         </div>
