--- a/index.html
+++ b/index.html
@@ -83,20 +83,24 @@
                     <span class="panel-icon">▼</span>
                 </div>
                 <div class="coupon-panel-content" id="meituan-allowance-content">
+                    <!-- ============== START: MODIFIED BLOCK ============== -->
                     <div class="coupon-card" id="allowance1">
                         <div class="coupon-title"><i class="fas fa-utensils coupon-icon"></i> 美团外卖津贴+免配</div>
                         <div class="coupon-actions">
-                            <button class="btn btn-jintie" id="allowance1_direct">直接跳转领券</button>
+                            <button class="btn btn-direct" id="allowance1_wechat_direct">微信直接跳转</button>
+                            <button class="btn btn-copy" id="allowance1_browser_copy">浏览器点击复制</button>
                         </div>
                         <div class="note">日常专享津贴，最高减5元，点击领取</div>
                     </div>
                     <div class="coupon-card" id="allowance2">
                         <div class="coupon-title"><i class="fas fa-coffee coupon-icon"></i> 美团奶茶津贴+免配</div>
                         <div class="coupon-actions">
-                            <button class="btn btn-jintie" id="allowance2_direct">直接跳转领券</button>
+                            <button class="btn btn-direct" id="allowance2_wechat_direct">微信直接跳转</button>
+                            <button class="btn btn-copy" id="allowance2_browser_copy">浏览器点击复制</button>
                         </div>
                         <div class="note">各大奶茶品牌专享，免运费，津贴叠加后最高减5</div>
                     </div>
+                    <!-- ============== END: MODIFIED BLOCK ============== -->
                 </div>
             </div>
 
