--- a/index.html
+++ b/index.html
@@ -103,7 +103,32 @@
                     <!-- ============== END: MODIFIED BLOCK ============== -->
                 </div>
             </div>
-
+	<!-- 美团膨胀18-18 -->
+	<div class="coupon-panel">
+    	<div class="coupon-panel-header" data-target="meituan-expand-content">
+       	 	<div class="coupon-panel-title"><i class="panel-title-bar meituan-blue"></i><i class="fas fa-bomb"></i> 美团膨胀18-18</div>
+       	 	<span class="panel-icon">▼</span>
+    	</div>
+    	<div class="coupon-panel-content" id="meituan-expand-content">
+        	<div class="coupon-card" id="expand1">
+            	<div class="tag">重视</div>
+            	<div class="coupon-title"><i class="fas fa-fire coupon-icon"></i> 膨胀神券18-18</div>
+            	<div class="coupon-actions">
+                	<button class="btn btn-direct" id="peng1_direct">直接跳转</button>
+            	</div>
+			<div class="note">限苹果手机 中午12点整卡秒必中18-18</div>
+</div>
+                 <div class="coupon-card" id="tb2">
+                        <div class="coupon-title"><i class="fas fa-coffee coupon-icon"></i> 日常膨胀</div>
+                        <div class="coupon-actions">
+                            <button class="btn btn-direct" id="peng2_direct">美团会员膨</button>
+                            <button class="btn btn-code" id="peng3_direct">天天膨</button>
+                            <button class="btn btn-copy" id="peng4_direct">单单膨</button>
+                        </div>
+                        <div class="note">每日膨胀奶茶小食，不限制设备</div>
+                    </div>
+        	</div>
+	</div>
             <!-- 美食酒店 -->
             <div class="coupon-panel">
                 <div class="coupon-panel-header" data-target="meituan-group-content">
@@ -168,7 +193,7 @@
                 <div class="coupon-panel-content" id="jd-content">
                     <div class="coupon-card jd-card" id="jd1">
                         <div class="tag">叠加</div>
-                        <div class="coupon-title"><i class="fas fa-ticket-alt coupon-icon"></i> 京东外卖6-5叠加券</div>
+                        <div class="coupon-title"><i class="fas fa-ticket-alt coupon-icon"></i> 京东外卖4-3叠加券</div>
                         <div class="coupon-actions">
                             <button class="btn btn-direct btn-jd" id="jd1_direct">直接跳转领券</button>
                         </div>
