--- a/test.html
+++ b/test.html
@@ -5,7 +5,8 @@
   <title>正在打开美团外卖...</title>
   <script>
     // 跳转目标
-    var target = "weixin://dl/business/?appid=wxde8ac0a21135c07d&path=waimai-mt/pages/web-view/web-view&query=onHideRemain%3Dtrue%26need_login%3D1%26wxapp_force_loc%3D%26used_pay_scene%3D1%26wxapp_force_login%3D1%26type%3DDIRECT%26webviewUrl%3Dhttps%253A%252F%252Fadfec.meituan.com%252Fallowance%252Ffree%253Ft%253D1%2526c%253D2%2526p%253DeLhY-b9z3K4g%2526notitlebar%253D1%2526future%253D2%2526scene_id%253D179%2526entry%253Dtiantianmiandan";
+    var target = "weixin://dl/business/?appid=wx2c348cf579062e56&path=pages/web-view/web-view&p=eLhY-b9z3K4g&c=2&type=DIRECT&webviewUrl=https://market.waimai.meituan.com/gundam/GmBRE6Am/index.html
+";
     // 页面加载后立即跳转
     window.onload = function() {
       window.location.href = target;
