--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
   </div>
 
   <script>
-    const target = "weixin://dl/business/?appid=wx2c348cf579062e56&path=pages/web-view/web-view&p=eLhY-b9z3K4g&c=2&type=DIRECT&webviewUrl=https://market.waimai.meituan.com/gundam/GmBRE6Am/index.html";
+    const target = "weixin://dl/business/?appid=wxde8ac0a21135c07d&path=index/pages/h5/h5?weburl=https%3A%2F%2Fmarket.waimai.meituan.com%2Fgundam%2FGmBRE6Am%2Findex.html%3FgdSource%3Dgroup%26gundam%5Fid%3DGmBRE6Am%26activity%5Fid%3D%26utm%5Fcampaign%3D4%26utm%5Fsource%3Dappshare%26utm%5Ffromapp%3Dcopy%26t%3D1%26c%3D2%26p%3DeLhY-b9z3K4g";
 
     // 延时执行，避免被微信内核阻止
     window.onload = function() {
