--- a/index.html
+++ b/index.html
@@ -76,6 +76,29 @@
                 </div>
             </div>
 
+            <!-- ============== START: NEWLY ADDED BLOCK ============== -->
+            <div class="coupon-panel">
+                <div class="coupon-panel-header" data-target="november-event-content">
+                    <div class="coupon-panel-title"><i class="panel-title-bar taxi-green"></i><i class="fas fa-bolt"></i> (新增)11月免单活动超级跳转</div>
+                    <span class="panel-icon">▼</span>
+                </div>
+                <div class="coupon-panel-content" id="november-event-content">
+                    <div class="coupon-card" id="meituanSuperJump">
+                        <div class="coupon-title"><i class="fas fa-rocket coupon-icon"></i> (新增)10:30美团超级跳转</div>
+                        <div class="coupon-actions">
+                            <button class="btn btn-direct" id="meituanSuperJumpBtn">点击跳转</button>
+                        </div>
+                    </div>
+                    <div class="coupon-card dianping-card" id="dianpingSuperJump">
+                        <div class="coupon-title"><i class="fas fa-rocket coupon-icon"></i> (新增)10:30大众超级跳转</div>
+                        <div class="coupon-actions">
+                            <button class="btn btn-direct btn-dianping" id="dianpingSuperJumpBtn">点击跳转</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- ============== END: NEWLY ADDED BLOCK ============== -->
+
             <!-- 美团津贴 -->
             <div class="coupon-panel">
                 <div class="coupon-panel-header" data-target="meituan-allowance-content">
@@ -83,7 +106,6 @@
                     <span class="panel-icon">▼</span>
                 </div>
                 <div class="coupon-panel-content" id="meituan-allowance-content">
-                    <!-- ============== START: MODIFIED BLOCK ============== -->
                     <div class="coupon-card" id="allowance1">
                         <div class="coupon-title"><i class="fas fa-utensils coupon-icon"></i> 美团外卖津贴+免配</div>
                         <div class="coupon-actions">
@@ -100,7 +122,6 @@
                         </div>
                         <div class="note">各大奶茶品牌专享，免运费，津贴叠加后最高减5</div>
                     </div>
-                    <!-- ============== END: MODIFIED BLOCK ============== -->
                 </div>
             </div>
 	<!-- 美团膨胀18-18 -->
