--- a/free.html
+++ b/free.html
@@ -176,7 +176,7 @@
         <h2>Lemon美団外卖兔单查询</h2>
     </div>
     
-    <p>仅需粘贴 Token, 即刻查询您的免单记录。</p>
+    <p>仅需粘贴 Token, 即刻查询您的兔单记录。</p>
     
     <!-- 醒目的新按钮 -->
     <button class="promo-btn" onclick="toggleQRCodeModal()">
@@ -257,23 +257,23 @@
                     }).replace(/\//g, '-');
                     let statusText = '';
                     switch (item.status) {
-                        case 0: statusText = '没免单'; break;
-                        case 1: statusText = '免单未打款'; break;
-                        case 2: statusText = '免单已打款'; break;
+                        case 0: statusText = '没兔单'; break;
+                        case 1: statusText = '兔单未打款'; break;
+                        case 2: statusText = '兔单已打款'; break;
                         default: statusText = `未知状态 (${item.status})`;
                     }
                     const card = document.createElement('div');
                     card.className = 'result-card';
                     if (index === 0) { card.classList.add('latest'); }
                     card.innerHTML = `
-                        <div class="result-item"><span class="label">免单金额:</span><span class="value">${price} 元</span></div>
+                        <div class="result-item"><span class="label">兔单金额:</span><span class="value">${price} 元</span></div>
                         <div class="result-item"><span class="label">商家接单时间:</span><span class="value">${ctime}</span></div>
-                        <div class="result-item"><span class="label">免单状态:</span><span class="value">${statusText}</span></div>
+                        <div class="result-item"><span class="label">兔单状态:</span><span class="value">${statusText}</span></div>
                     `;
                     responseContainer.appendChild(card);
                 });
             } else {
-                responseContainer.innerHTML = '<p class="no-result">查询完成，您没有任何免单记录。</p>';
+                responseContainer.innerHTML = '<p class="no-result">查询完成，您没有任何兔单记录。</p>';
             }
         } catch (error) {
             console.error('请求失败:', error);
@@ -283,4 +283,5 @@
 </script>
 
 </body>
+
 </html>
