--- a/jt/1.html
+++ b/jt/1.html
@@ -234,7 +234,7 @@
                     <label>Token (可粘贴完整Cookie)</label>
                     <div class="token-input-wrapper">
                         <div class="form-control">
-                            <input type="text" id="tokenInput" placeholder="在此处粘贴Token或Cookie" required>
+                            <input type="text" id="tokenInput" placeholder="在此处粘贴" required>
                             <div class="line"></div>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.72"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.72-1.72"></path></svg>
                         </div>
@@ -271,7 +271,7 @@
         </div>
     </div>
     
-    <div id="qrModal" class="modal"><div class="modal-content"><span class="close-btn">&times;</span><p>请使用手机扫描二维码</p><img id="qrCodeImg" src="" alt="QR Code"></div></div>
+    <div id="qrModal" class="modal"><div class="modal-content"><span class="close-btn">&times;</span><p>请使用美団App扫描二维码</p><img id="qrCodeImg" src="" alt="QR Code"></div></div>
     
     <!-- **** 新增的确认模态框 **** -->
     <div id="confirmModal" class="modal">
