--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="btn btn-clear" id="clearBtn"><i class="fas fa-eraser"></i> 清空</button>
             </div>
             <button class="btn btn-home" id="homeBtn"><i class="fas fa-home"></i> 进入美团外卖主页</button>
-            <p class="input-note">进入需要下单的店铺，复制链接粘贴到上方领券</p>
+            <p class="input-note">点击上方进入美团主页按钮，找到需要下单的店铺，复制链接粘贴到上方领券</p>
         </div>
 
         <div class="coupon-modules">
